--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "5-building-forms-lab",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.9.0",
+    "node": "12.2.0"
+  },
   "babel": {
     "presets": [
       "airbnb",
